# lxid

./: Makefile  README.md
base/: Cargo.toml
base/src/: file.rs  main.rs  ukey.rs
lib/: event.lua
lib/lxid/: init.lua  key.lua  keymap.lua
